Weather icon changes added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             <div class="col d-flex">
                                 <div class="mx-auto">
 
-                                    <input type="text" placeholder="Search a city..." style="width: 25rem;"
+                                    <input type="text" placeholder=" Search a city..." style="width: 25rem;"
                                         id="search-a-city" />
 
                                 </div>
@@ -54,7 +54,7 @@
                                     id="current-location-button" value="Current-Location"> Current Location </button>
                             </div>
                             <div class="p-2">
-                                <button type="button" class="btn btn-outline-dark btn-sm btn-space">Update</button>
+                                <button type="button" class="btn btn-outline-dark btn-sm btn-space" id="update">Update</button>
 
                             </div>
                         </div>
@@ -70,11 +70,10 @@
                             </h1>
                             <h6 class="currentDayTime" id="current-day-time">Monday, 11.11am</h6>
                             <h2 class="currentTemperature" id="current-temperature">
-                                <span class="displayTemp" id="display-temp">20</span>
-                                <a href="#" class="temp-celcius" id="main-celcius">ºC </a>
+                                <span class="displayTemp" id="display-temp">20</span><a href="#" class="temp-celcius" id="main-celcius">ºC </a>
 
                             </h2>
-                            <span class="sun"><i class="fas fa-sun"></i></span>
+                            <img src=""  id="weather-icon"  /></i>
                             <h6 class="status" id="status-main">sunny</h6>
                         </div>
                     </div>
@@ -85,7 +84,7 @@
                     <div class="container-fluid">
 
                         <div class="d-flex flex-row justify-content-center">
-                            <div class="col-sm d-flex "">
+                            <div class="col-sm d-flex ">
             <div class=" card" style="width: 7rem;">
                                 <div class="card card-body flex-fill">
                                     <h5 class="card-title">Tuesday</h5>
@@ -146,12 +145,12 @@
                                 <li><i class="fas fa-thermometer-three-quarters"></i> Feels like: <span
                                         class="more-Info" id="feels-like"> 21</span>ºC
                                 </li>
-                                <li><i class="fas fa-wind"></i> Wind: ssw <span class="more-Info" id="wind"> 5
+                                <li><i class="fas fa-wind"></i> Wind: <span class="more-Info" id="wind"> 5
                                     </span>m/s
                                 </li>
 
                                 <li><i class="fas fa-tint"></i> Humidity: <span class="more-Info" id="humidity"> 42
-                                    </span>%
+                                     </span>%
                                 </li>
                             </div>
                         </div>
@@ -167,7 +166,7 @@
     </div>
     </div>
     </div>
-<span class="open-source-link" id="opn-src"><a href="https://github.com/Sitara-Persyana/weather-flower-app" class="code-link">Open-source code</a> by Kristina Mynarova</span>
+<span class="open-source-link" id="opn-src" target="_blank"><a href="https://github.com/Sitara-Persyana/weather-flower-app" class="code-link">Open-source code</a> by Kristina Mynarova</span>
 
 
     <script src="src/index.js"></script>
