--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                                 <div class="mx-auto">
 
                                     <input type="text" placeholder=" Search a city..." style="width: 25rem;"
-                                        id="search-a-city" />
+                                        id="search-a-city" autocomplete="off" />
 
                                 </div>
                             </div>
@@ -73,65 +73,14 @@
                                 <span class="displayTemp" id="display-temp">20</span><a href="#" class="temp-celcius" id="main-celcius">ºC </a>
 
                             </h2>
-                            <img src=""  id="weather-icon"  /></i>
+                            <img src=""  id="weather-icon"/>
                             <h6 class="status" id="status-main">sunny</h6>
                         </div>
                     </div>
                 </div>
                 <br />
 
-                <div class="forecast">
-                    <div class="container-fluid">
 
-                        <div class="d-flex flex-row justify-content-center">
-                            <div class="col-sm d-flex ">
-            <div class=" card" style="width: 7rem;">
-                                <div class="card card-body flex-fill">
-                                    <h5 class="card-title">Tuesday</h5>
-                                    <i class="fas fa-sun"></i>
-                                    <p>15ºC/25ºC</P>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm d-flex">
-                            <div class="card" style="width: 7rem;">
-                                <div class="card card-body flex-fill">
-                                    <h5 class="card-title">Wednesday</h5>
-                                    <i class="fas fa-sun"></i>
-                                    <p>19ºC/27ºC</P>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm d-flex">
-                            <div class="card" style="width: 7rem;">
-                                <div class="card card-body flex-fill">
-                                    <h5 class="card-title">Thursday</h5>
-                                    <i class="fas fa-sun"></i>
-                                    <p>18ºC/27ºC</P>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm d-flex">
-                            <div class="card" style="width: 7rem;">
-                                <div class="card card-body flex-fill">
-                                    <h5 class="card-title">Friday</h5>
-                                    <i class="fas fa-cloud-sun-rain"></i>
-                                    <p>10ºC/18ºC</P>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-sm d-flex">
-                            <div class="card" style="width: 7rem;">
-                                <div class="card card-body flex-fill">
-                                    <h5 class="card-title">Saturday</h5>
-                                    <i class="fas fa-cloud-sun"></i>
-                                    <p>13ºC/22ºC</P>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
 
 
 
@@ -146,7 +95,7 @@
                                         class="more-Info" id="feels-like"> 21</span>ºC
                                 </li>
                                 <li><i class="fas fa-wind"></i> Wind: <span class="more-Info" id="wind"> 5
-                                    </span>m/s
+                                    </span> m/s
                                 </li>
 
                                 <li><i class="fas fa-tint"></i> Humidity: <span class="more-Info" id="humidity"> 42
