Added Netlify link

--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
     </div>
     </div>
 <span class="open-source-link" id="opn-src" target="_blank"><a href="https://github.com/Sitara-Persyana/weather-flower-app" class="code-link">Open-source code</a> by Kristina Mynarova</span>
+</br>
+<span class="open-source-link"> Hosted with
+<a href="https://amazing-haibt-c4da04.netlify.app" target="_blank"class="code-link">Netlify</a></span>
 
 
     <script src="src/index.js"></script>
